# NUCtool

./: README.md  package-lock.json  package.json
.github/: readme.md
src/: App.vue  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
src-tauri/src/linux_plug/: sysfs.rs
src-tauri/src/plug/: config.rs  constants.rs  fan.rs  fan_curve.rs  mod.rs  models.rs  ramp.rs  setup.rs  struct_set.rs
src-tauri/src/tests/: tests.rs
src-tauri/src/win_plug/: wmi.rs
src/assets/: tdp.js
